<resources>
    <string name="app_name">Memorize</string>
    <string name="setting">Setting</string>
    <string name="title_main_menu">Main Menu</string>
    <string name="title_chunking_menu">Chunking Menu</string>
    <string name="title_chunking_practice">Chunking Practice</string>
    <string name="initiating_3dot">Initiating....</string>
    <string name="apps_icon">Apps icon</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="apps_logo">Apps Logo</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="practice">Practice</string>
</resources>
