<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_baseline_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_practice"
            android:checked="true"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/practice" />

    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_power_settings"
            android:title="@string/logout" />

    </group>

</menu>
